# pointcloud-plane-segmentation

./: CMakeLists.txt
include/rspd/: boundaryvolumehierarchy.h  pclutils.h  planarpatch.h  plane.h  statisticsutils.h  unionfind.h
rspd/: CMakeLists.txt
rspd/include/rspd/: boundaryvolumehierarchy.h  geometryutils.h  planarpatch.h  planedetector.h
rspd/src/: planarpatch.cpp  planedetector.cpp
src/: main.cpp  planarpatch.cpp
